--- a/package.xml
+++ b/package.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0"?>
-<package format="2">
-  <name>ars_config_robot_intelligence</name>
+<package format="3">
+  <name>ars_robot_intelligence_config</name>
   <version>0.0.1</version>
-  <description>The ars_config_robot_intelligence</description>
+  <description>The ars_robot_intelligence_config</description>
 
   <maintainer email="joseluis.sanlop@gmail.com">Jose Luis SANCHEZ-LOPEZ</maintainer>
-  <author email="joseluis.sanlop@gmail.com">Jose Luis SANCHEZ-LOPEZ</author>
 
   <license>BSD</license>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <depend>rclpy</depend>
 
+  <test_depend>ament_copyright</test_depend>
+  <test_depend>ament_flake8</test_depend>
+  <test_depend>ament_pep257</test_depend>
+  <test_depend>python3-pytest</test_depend>
 
   <export>
+    <build_type>ament_python</build_type>
   </export>
 
 </package>
